--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=eureka-server
-server.port=8002
+spring.application.name=eureka-server-two
+server.port=8001
 eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http://localhost:8001/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8002/eureka/
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
 #eurekaServer.server.enable-self-preservation=false
